Fix dark mode again

--- a/src/components/controls/button-group/button-group.scss
+++ b/src/components/controls/button-group/button-group.scss
@@ -14,7 +14,7 @@
 html[data-theme="dark"] {
 	.button-group {
 		.ant-btn-text {
-			color: rgba(0, 0, 0, 0.88);
+			color: rgba(0, 0, 0, 0.88) !important;
 		}
 	}
 }
